Added OIDC redirect endpoint, and cleaned up cookie handling
